omni/tests/goldens/types/unknown_type_24.err
tests/goldens/types/unknown_type_24.omni:1:13: error: unknown type "Mystery24"
     1 | let value24:Mystery24 = 1
       |             ^^^^^^^^^
     2 | 
  hint: import or declare the type before use

tests/goldens/types/unknown_type_24.omni:1:1: error: cannot assign int to Mystery24
     1 | let value24:Mystery24 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery24 or change the variable type to int
